# skat

./: .gitignore  CMakeLists.txt  README.md  fix.ps1  fix.py  invis.project.sln
.github/workflows/: build.yml
injector/: main.cpp
invis/: auth.h  entry.cpp  invis.project.vcxproj  invis.project.vcxproj.filters  offsets.h  settings.hpp  sound.h
invis/Imgui/: colors.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_widgets.cpp
invis/Imgui/freetype/: imgui_freetype.cpp
invis/core/: stdafx.hpp
invis/core/drawing/: Fonts.hpp  d3d.hpp  render.hpp
invis/core/drawing/Menu/: HitMarker.h  menu.hpp
invis/core/main/: entities.hpp  hooks.hpp  other.hpp  serverchecker.h
invis/core/sdk/: Config.hpp  game.hpp  mem.hpp  structs.hpp  vector.hpp
invis/core/sdk/il2cpp/: dissector.hpp  wrapper.hpp
invis/core/sdk/utils/: hookengine.hpp  json.cpp  json.hpp  math.hpp  xorstr.hpp
invis/directx/Include/: D3D11Shader.h
invis/discord/includes/: discord_rpc.cpp  discord_rpc.h  serialization.h
invis/discord/main/: discord_rpc_init.cpp  discord_rpc_init.h
invis/keyauth/: json.hpp  jsonauth.hpp  library_x64.lib
src/: main.cpp  offsets.h  unity.h
